--- a/Dockerfile.openssl_ubuntu_latest
+++ b/Dockerfile.openssl_ubuntu_latest
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 
 RUN apt-get update && apt-get install -y \
-    openssl \
+    openssl ca-certificates \
  && rm -rf /var/lib/apt/lists/*
  
