--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Authenticate with ghcr.io
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Build and Push Images
+      - name: 'generic: Build and Push Images'
         run: |
           repo=${{ github.repository }}
           for dockerfile in Dockerfile.*; do
@@ -29,3 +29,13 @@ jobs:
             docker build . -f "$dockerfile" --tag "$tag" --label "runnumber=${GITHUB_RUN_ID}"
             docker push "$tag"
           done # ah, sweet single-threaded; could bg builds, then wait and push, but gathering what to push to an array, and then somehow presenting _all_ of t
+
+      - name: 'httpd: Build and Push Images'
+        run: |
+          repo='jtagcat/docker_httpd_mods'
+          for config in httpd/configs/*; do
+            conf=$( basename "$config" | sed 's/.conf$//g' )
+            tag="ghcr.io/$repo:$conf"
+            docker build httpd --tag "$tag" --label "runnumber=${GITHUB_RUN_ID}" --build-arg "CONFIG=$conf.conf"
+            docker push "$tag"
+          done # ah, sweet single-threaded; could bg builds, then wait and push, but gathering what to push to an array, and then somehow presenting _all_ of them as arguments seems too much work for this 2-config repo.
